fixing highlight syntax

--- a/1.md
+++ b/1.md
@@ -12,7 +12,7 @@
 
 Что ж, давайте наконец рассмотрим самую первую программу на "плюсах", которую напишет начинающий любитель пострелять себе в ногу:
 
-```c++
+```cpp
 #include <iostream>
 
 int main() {
