--- a/1/1.md
+++ b/1/1.md
@@ -8,6 +8,8 @@
 
 Отлично, теперь, когда мы знаем, с чем имеем дело, надо задать ещё один вопрос - а в чём основные отличия языка C++ от других и зачем он нужен? Прежде всего, программы, написанные на C++, отличаются свом быстродействием. Но, как всегда, за скорость исполнения приходится чем-то платить. И тут в силу вступает другая особенность языка - необходимость ручного контроля за всеми действиями. Проще говоря, любые действия поначалу требуют вмешательства программиста - выделение и освобождения памяти, отлваливание ошибок и так далее. Оба свойства C++ связаны с тем, что язык взаимодействует с операционной системой, что, с одной стороны, даёт много возможностей для написания программ, но с другой - требует осознанности при создании комплексных приложений на этом языке.
 
+Как часть парадигмы ручного контроля за исполнением программы, существует концепция неопределённого поведения (undefined behavior). То есть, вся ответственность за правильное исполнение кода перекладывается на программиста. Если программист пишет код, не предусмотренный создателями языка, исполнение программы может привести к абсолютно непредсказуемому исходу. Причём даже не всегда такое поведение можно отследить.
+
 Существует много стандартов языка C++, но в данном курсе давайте условимся, что, если не сказано иного, речь будет идти о стандарте C++23 (то есть, о новейшем на данный момент).
 
 Что ж, давайте наконец рассмотрим самую первую программу на "плюсах", которую напишет начинающий любитель пострелять себе в ногу:
@@ -19,3 +21,33 @@ int main() {
     std::cout << "Hello, world!" << std::endl;
 }
 ```
+
+```cpp
+#include <iostream>
+```
+
+Подключение части стандартной библиотеки, отвечающей за ввод-вывод данных в консоли
+
+```cpp
+int main()
+```
+
+Точка входа програмы, отсюда начинается исполнение кода
+
+```cpp
+std::cout
+```
+
+Обозначение для потока вывода в C++
+
+```cpp
+<<
+```
+
+Операция "сдвига" данных в поток вывода
+
+```cpp
+std::endl
+```
+
+Обозначение для перевода на новую строку
