--- a/2/2.md
+++ b/2/2.md
@@ -1,3 +1,50 @@
 **_Занятие 2_**
 
 Сегодня поговормим об основных типах в языке C++
+
+Начнём с арифметических типов - char, short, int, long, long long.
+Все эти типы различаются только размером:
+_char_ - 1 байт
+_short_ - 2 байта
+_int_ - 4 байта
+_long_ - 4/8 байт
+_long long_ - 8 байт
+
+Также перед названием типа может быть указан вид числа - знаковое/беззнаковое:
+_unsigned char_ - беззнаковое число размером 1 байт
+Для остальных типов - аналогично. Если хотите завести беззнаковое 32-битное число, достаточно написать _unsigned_, писать _unsigned int_ необязательно. также важн отметить, что по умолчанию не указано, является _char_ знаковым или беззнаковым, поэтому, если это важно для Вашей программы, следует явно указать знак: _signed_/_unsigned char_
+
+Для всех этих типов определены стандартные арифметические операции - сложение(+), умножение(\*), вычитание(-), деление(/), взятие остатка от деления(%), побитовые операции(&, |, ^, ~), сдвиги(<<, >>), логические операции(!, &&, ||), операции сравнения (==, !=, <, >, <=, >=).Всё это работает аналогично остальным языкам программирования.
+
+Стоит отметить, что при работе с реальными программами есть вероятность переполнения данных (то есть ситуации, когда полученное значение превышает максимально допустимое для хранения в данном типе). Тогда Возникает две возможные ситуации:
+
+1. _Число беззнаковое._ Тогда просто производится деление по модулю максимального числа для данного типа и в переменную записывается остаток. Проще говоря, включается циклическая арифметика.
+
+2. _Число знаковое._ Тогда это считается ситуацией, в которой возникает _*undefined behavior*_, и дальнейшее поведение программы считается непредсказуемым.
+
+Также стоит обратить внимание, что битовые сдвиги считаются валидными только для беззнаковых чисел, в ином случае - UB.
+
+Также доступны типы данных для хранения чисел с плавающей точкой - float и double. Для них определены только основные арифметические и логические операции. К тому же, дробные числа в C++ могут быть только знаковыми.
+
+Важно учесть, что проверка на равенство для двух чисел с плавающей точкой далеко не всегда будет работать так, как должна. Вот пример:
+
+```cpp
+#include <iostream>
+
+int
+main()
+{
+    double y = 1e101;
+    double x = -y;
+    double z = 1.0;
+    double v1 = x + (y + z);
+    double v2 = (x + y) + x;
+    std::cout << (v1 == v2) << std::endl;
+}
+```
+
+Вроде бы с точки зрения математики программа должна вывести 1, но выводит 0 из-за ошибок округления.
+
+Очевидно, что также в C++ есть и логический тип bool со значениями true и false. Все перечисленные логические операции определены в том числе и для этого типа.
+
+Также в C++ есть и агрегированные типы данных (структуры, массивы и т. д.), но они будут рассмотрены в следующем занятии.
