--- a/2/2.md
+++ b/2/2.md
@@ -47,4 +47,30 @@ main()
 
 Очевидно, что также в C++ есть и логический тип bool со значениями true и false. Все перечисленные логические операции определены в том числе и для этого типа.
 
+Также к каждому из обозначений типов может быть приписано ключевое слово _const_. Это будет означать, что значение данной переменной будет записано в read-only памяти. То есть, мы не сможем изменить это значение никакими программными средствами. Такие изменения в коде минимально влияют на производительность программы, и скорее являются подсказками для компилятора о том, что данное значение можно рассматривать как неизменяемое и оптимизировать код, основываясь на этом предположении.
+
+Последним рассмотренным на этом занятии типом будет указатель. Переменная такого типа хранит в себе адрес памяти. Например, указатель на 32-битное беззнаковое число будет выглядеть следующим образом -
+
+```cpp
+
+int *pa;
+```
+
+Чтобы получить адрес переменной, используется операция &, например, так
+
+```cpp
+int a;
+int *pa = &a;
+```
+
+Чтобы получить значение переменной, хранящееся по указателю, используется знак \*:
+
+```cpp
+int a;
+int *pa = &a;
+int b = *pa;
+```
+
+Многие считают, что указатели - одна из самых сложных тем в C++. Далее Вы увидите, почему это именно так, а пока просто остановимся на перечислении операций над указателями - разменование (\*) и сложение(+).
+
 Также в C++ есть и агрегированные типы данных (структуры, массивы и т. д.), но они будут рассмотрены в следующем занятии.
