--- a/3/3.md
+++ b/3/3.md
@@ -24,10 +24,10 @@ arr[4] = 5;
 
 Память под такой массив выделяется на стэке. Соответственно, она будет освобождена при выходе из той области видимости, в которой была выделена (областью видимости называется секция кода между двумя фигурными скобками - это может быть как область цикла for, так и просто так поставленные две скобки). А значит, обращение к этой памяти будет вызывать undefined behavior.
 
-Если нужно заранее выделить память и проинициализировать массив нужными значениями, это можно сделать при помощи такой вещи, как initializer list:
+Если нужно заранее выделить память и проинициализировать массив нужными значениями, это можно сделать при помощи такой вещи, как initializer list. При этом, нам необязательно указывать количество элементов в массиве - компилятор определит его за нас:
 
 ```cpp
-int arr[5] = {1, 2, 3, 4 5};
+int arr[] = {1, 2, 3, 4 5};
 ```
 
 ```cpp
